# popup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: blitzortung.rs  cocoa_app.rs  egui_view.rs  hotkey.rs  main.rs  trrpy.rs  ui.rs  utils.rs  websocket.rs
