[package]
name = "popuppp"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSNotification",
    "NSString",
    "NSObject",
    "NSThread",
] }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSResponder",
    "NSApplication",
    "NSRunningApplication",
] }
eframe = { version   = "0.32.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
