[package]
name = "popuppp"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSNotification",
    "NSString",
    "NSObject",
    "NSThread"
] }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSResponder",
    "NSApplication",
    "NSRunningApplication","NSGraphics"
] }
eframe = { version = "0.32.0", features = ["default", "__screenshot", "wgpu"] }
egui-wgpu = "0.32.0"
wgpu = "25.0.2"
raw-window-handle = "0.6.2"
epaint = "0.32.0"
